--- a/styles/main.css
+++ b/styles/main.css
@@ -24,8 +24,16 @@
   background-color: rgb(52, 152, 219);
 }
 
+.background--moblinGreen {
+  background-color: rgb(0, 136, 136);
+}
+
 .color--skyBlue {
   color: rgb(52, 152, 219);
+}
+
+.color--moblinGreen {
+  color: rgb(0, 136, 136);
 }
 
 .color--cloud {
